Bug fixed: Breadcrumb element overlaps top navigation menu.

--- a/css/src/assembler/organisms/_header.scss
+++ b/css/src/assembler/organisms/_header.scss
@@ -229,7 +229,7 @@
   height: 100%;
   width: 100%;
   background: rgba($black,.9);
-  z-index: 2;
+  z-index: 99;
   text-align: center;
   padding: 42px 0;
   backface-visibility: hidden;
